sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:22: error: illegal start of simple expression
		if(T(j-1)>v))
                            ^